--- a/style.css
+++ b/style.css
@@ -26,7 +26,6 @@ body {
     flex-direction: column;
     align-items: center;
     gap: 20px;
-    position: relative;
     z-index: 1; /* Ensure app content stays behind the form */
 }
 
@@ -89,9 +88,17 @@ button {
 }
 
 
+#res{
+    background-color: #0f172a;
+    min-height:120%;
+    /* transform: scale(0.8); */
+}
 
+li{
+    transform: scale(0.9);
+    line-height: 25px;
+}
 .form {
-   /* background-color: #10b981; */
    padding: 50px;
    border-top: 1px solid white;
    display: none;
@@ -100,10 +107,6 @@ button {
 
 .form .data {
     padding-bottom: 20px;
-}
-
-.form {
-    max-height: 80vh;
 }
 .form::-webkit-scrollbar{
     background-color: rgb(255, 253, 253);
@@ -221,6 +224,12 @@ li{
     align-items: center;
 }
 
+p{
+    background: linear-gradient(to right, #0ea4e9a9, #10b9818f);
+    padding: 3px;
+    border-radius: 2px;
+    text-align: center;
+}
 @media screen and (max-width : 500px){
     .listob, .listof{
         grid-template-columns: repeat(1, 1fr);
